<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/moving_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/kenBurnsView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/watch" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fragment_mail_bt_send"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_mail_tv_date_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/mail_fragment_date_hint"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:id="@+id/ll_mail_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_transparent"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="85"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:padding="10dp"
                        android:text="@string/from" />

                    <TextView
                        android:id="@+id/fragment_mail_tv_date_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/mail_fragment_date_example" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/fragment_mail__iv_date_picker_from"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="15"
                    android:background="@drawable/ripple_transparent_oval"
                    android:padding="10dp"
                    android:src="@drawable/button_edit_on_press" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_mail_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_transparent"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="85"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:padding="10dp"
                        android:text="@string/to" />

                    <TextView
                        android:id="@+id/fragment_mail_tv_date_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/mail_fragment_date_example" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/fragment_mail__iv_date_picker_to"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="15"
                    android:background="@drawable/ripple_transparent_oval"
                    android:padding="10dp"
                    android:src="@drawable/button_edit_on_press" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_mail_w_et_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <EditText
                        android:id="@+id/fragment_mail_et_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mail_fragment_mail_to_send"
                        android:lines="1"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/fragment_mail_bt_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:height="50dp"
        android:focusable="false"
        android:text="@string/global_send"
        android:textColor="@color/white"
        android:textSize="13sp" />
</RelativeLayout>
